--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ div#search-theme-form-advanced fieldset#edit-advanced.collapsible legend span.fi
     display: none;
 }
 */
+html.js fieldset:not(.filter-wrapper):not(.vertical-tabs-pane):not(#edit-advanced).collapsible legend {
+  width: 0%;
+}
 #header-content {
     position: absolute;
     margin-left: 982px;
